# Mokafe-ulysses-narrative-gmm

./: 00_ulysses_gmm_report_v1_02.ipynb  README.md  Ulysses_GMM_SFT.ipynb  pyproject.toml
data/sample/: ulysses_fixed.json  ulysses_stream.csv
docs/paper/: README.md  annotation prompt.txt
notebooks/: 00_ulysses_gmm_report.ipynb  00_ulysses_gmm_report_v1_02.ipynb  01_ulysses_boundary_report.ipynb  Ulysses_GMM_SFT.ipynb  Ulysses_GMM_SFT_github_superclean.ipynb
scripts/: run_report.py
src/narrative_gmm/: __init__.py  io.py  metrics.py  model.py  report.py
